--- a/deno.json
+++ b/deno.json
@@ -18,7 +18,7 @@
     "lineWidth": 100
   },
   "imports": {
-    "oak/": "https://deno.land/x/oak@v12.6.1/",
+    "oak": "https://deno.land/x/oak@v12.6.1/mod.ts",
     "~/": "./src/"
   }
 }
