[add] テストコード作成

--- a/deno.json
+++ b/deno.json
@@ -19,6 +19,7 @@
   },
   "imports": {
     "oak": "https://deno.land/x/oak@v12.6.1/mod.ts",
+    "test/": "https://deno.land/std@0.210.0/testing/",
     "~/": "./src/"
   }
 }
