--- a/deno.json
+++ b/deno.json
@@ -19,7 +19,9 @@
   },
   "imports": {
     "oak": "https://deno.land/x/oak@v12.6.1/mod.ts",
+    "http": "https://deno.land/std@0.200.0/http/http_status.ts",
     "test/": "https://deno.land/std@0.210.0/testing/",
+    "ulid": "https://deno.land/x/ulid/mod.ts",
     "~/": "./src/"
   }
 }
